crates/sui-prover/tests/snapshots/spec_syntax/ext_without_mode.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
warning: unused function
   ┌─ tests/inputs/spec_syntax/ext_without_mode.fail.move:14:5
   │
14 │ fun foo_spec(): u64 {
   │     ^^^^^^^^ The non-'public', non-'entry' function 'foo_spec' is never called. Consider removing it.
   │
   = This warning can be suppressed with '#[allow(unused_function)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: #[ext(spec(...))] on 'ext_without_mode::foo_spec' requires #[mode(spec)]
   ┌─ tests/inputs/spec_syntax/ext_without_mode.fail.move:14:1
   │  
14 │ ╭ fun foo_spec(): u64 {
15 │ │     let _ = helper();
16 │ │     foo()
17 │ │ }
   │ ╰─^

error: #[ext(spec_only(...))] on 'ext_without_mode::helper' requires #[mode(spec)]
  ┌─ tests/inputs/spec_syntax/ext_without_mode.fail.move:5:1
  │  
5 │ ╭ fun helper(): bool {
6 │ │     true
7 │ │ }
  │ ╰─^
