crates/sui-prover/tests/snapshots/spec_syntax/spec_and_spec_only.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: 'spec_and_spec_only::foo_spec' cannot be both #[ext(spec(...))] and #[ext(spec_only(...))]
   ┌─ tests/inputs/spec_syntax/spec_and_spec_only.fail.move:9:1
   │  
 9 │ ╭ fun foo_spec(): u64 {
10 │ │     foo()
11 │ │ }
   │ ╰─^
